fix: make it work on mobile view

--- a/playground/assets/styles.css
+++ b/playground/assets/styles.css
@@ -574,6 +574,10 @@ video {
   margin-right: 0.375rem;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -594,6 +598,10 @@ video {
   width: 2rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .items-center {
   align-items: center;
 }
@@ -602,8 +610,28 @@ video {
   justify-content: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-gray-300 {
+  border-color: #d1d5db;
+}
+
+.border-gray-600 {
+  border-color: #4b5563;
 }
 
 .bg-neutral-200\/40 {
@@ -620,6 +648,22 @@ video {
 
 .bg-white {
   background-color: #fff;
+}
+
+.bg-gray-50 {
+  background-color: #f9fafb;
+}
+
+.bg-gray-700 {
+  background-color: #374151;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-2\.5 {
+  padding: 0.625rem;
 }
 
 .px-2 {
@@ -652,6 +696,20 @@ video {
 
 .text-white {
   color: #fff;
+}
+
+.text-gray-900 {
+  color: #111827;
+}
+
+.placeholder-gray-400::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-400::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
 }
 
 .shadow-\[inset_0_1px_0_0_\#ffffff1e\] {
@@ -729,6 +787,24 @@ video {
   background-color: rgb(23 23 23 / 0.1);
 }
 
+.focus\:border-blue-500:focus {
+  border-color: #3b82f6;
+}
+
+.focus\:border-blue-50:focus {
+  border-color: #eff6ff;
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
+
 .after\:active\:bg-neutral-200\/40:active::after {
   content: var(--tw-content);
   background-color: rgb(229 229 229 / 0.4);
@@ -737,4 +813,37 @@ video {
 .after\:active\:bg-neutral-900\/20:active::after {
   content: var(--tw-content);
   background-color: rgb(23 23 23 / 0.2);
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:border-gray-600 {
+    border-color: #4b5563;
+  }
+
+  .dark\:bg-gray-700 {
+    background-color: #374151;
+  }
+
+  .dark\:text-white {
+    color: #fff;
+  }
+
+  .dark\:placeholder-gray-400::-moz-placeholder {
+    --tw-placeholder-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+  }
+
+  .dark\:placeholder-gray-400::placeholder {
+    --tw-placeholder-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+  }
+
+  .dark\:focus\:border-blue-500:focus {
+    border-color: #3b82f6;
+  }
+
+  .dark\:focus\:ring-blue-500:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+  }
 }
