--- a/src/runtime/styles.css
+++ b/src/runtime/styles.css
@@ -44,6 +44,10 @@
   z-index: 20;
 }
 
+.nf-z-50 {
+  z-index: 50;
+}
+
 .nf-ml-2 {
   margin-left: 0.5rem;
 }
@@ -52,12 +56,24 @@
   margin-left: auto;
 }
 
+.nf-mb-8 {
+  margin-bottom: 2rem;
+}
+
+.nf-ml-4 {
+  margin-left: 1rem;
+}
+
 .nf-flex {
   display: flex;
 }
 
 .nf-grid {
   display: grid;
+}
+
+.nf-hidden {
+  display: none;
 }
 
 .nf-h-5 {
@@ -82,6 +98,10 @@
 
 .nf-w-full {
   width: 100%;
+}
+
+.nf-w-auto {
+  width: auto;
 }
 
 .nf-scale-\[5\] {
@@ -120,6 +140,10 @@
   flex-wrap: wrap;
 }
 
+.nf-items-start {
+  align-items: flex-start;
+}
+
 .nf-items-end {
   align-items: flex-end;
 }
@@ -140,10 +164,18 @@
   gap: 1rem;
 }
 
+.nf-gap-8 {
+  gap: 2rem;
+}
+
 .nf-space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.nf-self-start {
+  align-self: flex-start;
 }
 
 .nf-overflow-hidden {
@@ -235,6 +267,11 @@
   padding-bottom: 0.5rem;
 }
 
+.nf-px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .nf-pl-0 {
   padding-left: 0px;
 }
@@ -269,6 +306,14 @@
 
 .nf-pt-16 {
   padding-top: 4rem;
+}
+
+.nf-pt-6 {
+  padding-top: 1.5rem;
+}
+
+.nf-pt-2 {
+  padding-top: 0.5rem;
 }
 
 .nf-text-sm {
@@ -365,6 +410,26 @@
     left: auto;
   }
 
+  .lg\:nf-block {
+    display: block;
+  }
+
+  .lg\:nf-hidden {
+    display: none;
+  }
+
+  .lg\:nf-flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:nf-flex-wrap {
+    flex-wrap: wrap;
+  }
+
+  .lg\:nf-items-end {
+    align-items: flex-end;
+  }
+
   .lg\:nf-space-y-16 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
@@ -374,5 +439,14 @@
   .lg\:nf-px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:nf-px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:nf-pt-12 {
+    padding-top: 3rem;
   }
 }
